# dinero

./: Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: ci.yml  publish.yml  tarpaulin.yml
core/: Cargo.toml
core/src/: add.rs  allocate.rs  compare.rs  equal.rs  greater_than.rs  greater_than_or_equal.rs  has_sub_units.rs  have_same_amount.rs  have_same_currency.rs  is_negative.rs  is_positive.rs  is_zero.rs  less_than.rs  less_than_or_equal.rs  lib.rs  maximum.rs  messages.rs  minimum.rs  multiply.rs  normalize_scale.rs  normalize_scale_tuple.rs  subtract.rs  transform_scale.rs  trim_scale.rs
core/src/currencies/: mod.rs
core/src/format/: mod.rs
currencies/: Cargo.toml
currencies/src/: lib.rs
src/: lib.rs  main.rs
src/api/: add.rs  allocate.rs  compare.rs  convert.rs  equal.rs  greater_than.rs  greater_than_or_equal.rs  has_sub_units.rs  have_same_amount.rs  have_same_currency.rs  is_negative.rs  is_positive.rs  is_zero.rs  less_than.rs  less_than_or_equal.rs  maximum.rs  minimum.rs  mod.rs  multiply.rs  normalize_scale.rs  normalize_scale_tuple.rs  subtract.rs  transform_scale.rs  trim_scale.rs
src/currencies/: mod.rs
src/error/: mod.rs
src/format/: mod.rs
src/messages/: mod.rs
